# is-string

./: .gitignore  README.md  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  tests.yml
is_string/: is_string.py
is_string/tests/: test_is_string.py
tests/: test_is_string.py
