[metadata]
name = is_string
version = 0.0.2
author = Przemek Kaminski
author_email = przemyslaw.m.kaminski@gmail.com
description = A small Python library to determine if something is a string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/przemo199/is_string
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

;[options]
;package_dir =
;    = is_string
;packages = find:
;python_requires = >=3.6

[options.packages.find]
where = is_string

[tool:pytest]
addopts = --doctest-modules --cov=./is_string